# OOP_Lab07

./: .gitignore  CMakeLists.txt  README.md  input.txt  main.cpp
include/: core.h  druid.h  factory_npc.h  npc.h  observer.h  orc.h  squirrel.h  visitor_sim_fight.h
src/: core.cpp  druid.cpp  factory_npc.cpp  npc.cpp  observer.cpp  orc.cpp  squirrel.cpp  visitor_sim_fight.cpp
